Fix mistakes: 1) Fix underline of css modificator in block lang-link. 2) Fix margin auto in block places. 3) Fix horizontal scroll

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -8,7 +8,7 @@
 }
 @media screen and (max-width: 768px) {
   .intro__text {
-    max-width: 720px;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 744px) {
