--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -20,7 +20,13 @@
     min-width: 720px;
   }
 }
+@media screen and (max-width: 758px) {
+  .intro {
+    margin-left: auto;
+    margin-right: auto;
 
+  }
+}
 @media screen and (max-width: 744px) {
   .intro {
     min-width: 90vw;
